# SpaceSimulation

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/classes/: Player.cpp  Player.h
src/tools/: Environment.h  Orientation.cpp  Orientation.h  Types.h
